# nlm-path-lib

./: README.md  pyproject.toml
nlm_lib/: color_vectors.py  writers.py
nlm_path_lib/: transfer_functions.py
